Removed opacity on images + added border-radius and white borders // Fixed interests page on mobile and added white borders + added container div // Fixed mobile nav bar font size & padding

--- a/common.css
+++ b/common.css
@@ -33,12 +33,11 @@ body {
     .topnav a {
         color: #f2f2f2;
         text-align: center;
-        padding: 5px 4px;
+        padding: 8px 8px;
         text-decoration: none;
-        font-size: 30px;
+        font-size: 24px;
         border-radius: 20px;
         margin: 0px 6px 6px 0px;
-        font-size: 24px
     }
 }
 
