--- a/photos.css
+++ b/photos.css
@@ -14,8 +14,9 @@ img {
     height: 400px;
     width: auto;
     display: inline-block;
-    opacity: 0.87;
     cursor: pointer;
+    border-radius: 18px;
+    border: 4px solid white;
 }
 
 img:hover {
